--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
-    <link rel="stylesheet" href="https://github.com/RichtigerRaul/dishdatertesting/blob/main/css/welcome.css"> <!-- Verknüpfung mit der CSS-Datei -->
+    <link rel="stylesheet" href="styles.css"> <!-- Verknüpfung mit der CSS-Datei -->
 </head>
 <body>
     <img src="https://raw.githubusercontent.com/RichtigerRaul/dishdatertesting/refs/heads/main/img/main/logoicon.png" alt="Logo">
