--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="https://raw.githubusercontent.com/RichtigerRaul/dishdatertesting/refs/heads/main/img/main/logoicon.png" alt="Logo">
-    <button>Start</button>
+    <button href="https://github.com/RichtigerRaul/dishdatertesting/blob/main/menu.html">Start</button>
 </body>
 </html>
