--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <img src="https://raw.githubusercontent.com/RichtigerRaul/dishdatertesting/refs/heads/main/img/main/logoicon.png" alt="Logo">
-    <button href="https://github.com/RichtigerRaul/dishdatertesting/blob/main/menu.html">Start</button>
+    <button onclick="menu()">Start</button> <!-- Button führt die Funktion aus -->
+
+    <!-- Verknüpfung zur externen JavaScript-Datei -->
+    <script src="script.js"></script>
 </body>
 </html>
