--- a/menu.html
+++ b/menu.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
-<title>Menu</title>
-  <body>
-<button>Frühstück</button>
-<button>Mittagessen</button>
-<button>Abendessen</button>
-<button>Snacks</button>
-  </body>
+<html lang="de">
+<head>
+    <meta charset="UTF-8"> <!-- Zeichensatz, damit Umlaute korrekt dargestellt werden -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Für responsive Darstellung auf mobilen Geräten -->
+    <title>Menu</title>
+</head>
+<body>
+    <button>Frühstück</button>
+    <button>Mittagessen</button>
+    <button>Abendessen</button>
+    <button>Snacks</button>
+</body>
 </html>
