--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="https://raw.githubusercontent.com/RichtigerRaul/dishdatertesting/refs/heads/main/img/main/logoicon.png" alt="Logo">
-    <button onclick="navigateTo('menu.html')">Start</button> <!-- Button führt die Funktion aus -->
+    <button onclick="navigateTo(menu.html)">Start</button> <!-- Button führt die Funktion aus -->
 
     <!-- Verknüpfung zur externen JavaScript-Datei -->
     <script src="script.js"></script>
