--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Verknüpfung mit der CSS-Datei -->
 </head>
 <body>
-    <img src="menu.html" alt="Logo">
+    <img src="https://raw.githubusercontent.com/RichtigerRaul/dishdatertesting/refs/heads/main/img/main/logo.jpg" alt="Logo">
     <button onclick="navigateTo(https://github.com/RichtigerRaul/dishdatertesting/blob/main/menu.html)">Start</button> <!-- Button führt die Funktion aus -->
 
     <!-- Verknüpfung zur externen JavaScript-Datei -->
