--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <img src="img/main/logo.jpg" alt="Logo">
-    <button onclick="navigateTo('menu.html')">Start</button>
+    <button onclick="goto('menu.html')">Start</button>
 
     <!-- Verknüpfung zur externen JavaScript-Datei -->
     <script src="script.js"></script>
