--- a/menu.html
+++ b/menu.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="styles.css"> <!-- Verknüpfung mit der CSS-Datei -->
 </head>
 <body>
-    <img src="img/main/logoicon.jpg" alt="Logo">
-    <button onclick="goto('dishdater.html')">Frühstück</button>
-    <button onclick="goto('dishdater.html')">Mittagessen</button>
-    <button onclick="goto('dishdater.html')">Abendessen</button>
-    <button onclick="goto('dishdater.html')">Snacks</button>
+    <button onclick="goto('dishdater.html', 'Frühstück')">Frühstück</button>
+    <button onclick="goto('dishdater.html', 'Mittagessen')">Mittagessen</button>
+    <button onclick="goto('dishdater.html', 'Abendessen')">Abendessen</button>
+    <button onclick="goto('dishdater.html', 'Snacks')">Snacks</button>
 
     <!-- Verknüpfung zur externen JavaScript-Datei -->
     <script src="script.js"></script>
