--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Verknüpfung mit der CSS-Datei -->
 </head>
 <body>
-    <img src="img/main/ddbanner.png" alt="Banner">
+    <img src="img/main/ddlogo.jpg" alt="Banner">
     <button onclick="goto('dishdater.html', 'Frühstück')">Frühstück</button>
     <button onclick="goto('dishdater.html', 'Mittagessen')">Mittagessen</button>
     <button onclick="goto('dishdater.html', 'Abendessen')">Abendessen</button>
