--- a/menu.html
+++ b/menu.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <img src="img/main/ddlogo.jpg" alt="Banner">
-    <button onclick="goto('dishdater.html', 'Frühstück')">Frühstück</button>
-    <button onclick="goto('dishdater.html', 'Mittagessen')">Mittagessen</button>
-    <button onclick="goto('dishdater.html', 'Abendessen')">Abendessen</button>
-    <button onclick="goto('dishdater.html', 'Snacks')">Snacks</button>
+    <button onclick="goto('ddf.html')">Frühstück</button>
+    <button onclick="goto('ddm.html')">Mittagessen</button>
+    <button onclick="goto('dda.html')">Abendessen</button>
+    <button onclick="goto('dds.html')">Snacks</button>
 
     <!-- Verknüpfung zur externen JavaScript-Datei -->
     <script src="script.js"></script>
