--- a/ddf.html
+++ b/ddf.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dish Dater</title>
+    <title>Frühstück</title>
     <link rel="stylesheet" href="styles.css"> <!-- Verknüpfung mit der CSS-Datei -->
 </head>
 <body>
-   
+   <h1>Frühstück</h1>
 
     <!-- Verknüpfung zur externen JavaScript-Datei -->
     <script src="script.js"></script>
