--- a/ddm.html
+++ b/ddm.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mittagessen</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Verknüpfung mit der CSS-Datei -->
+</head>
+<body>
 
+  <h1>Mittagessen</h1>
+
+    <!-- Verknüpfung zur externen JavaScript-Datei -->
+    <script src="script.js"></script>
+</body>
+</html>
