--- a/dds.html
+++ b/dds.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snacks</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Verknüpfung mit der CSS-Datei -->
+    <title>SNACKS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>🍽️ Snacks</h1>
+    </header>
     
-   <h1>Snacks</h1>S
+    <main>
+        <div class="card">
+            <img id="zutaten-image" src="" alt="Zutatenbild">
+            <h2 id="zutaten-name"></h2>
+            <p id="zutaten-tags"></p>
+        </div>
+        
+        <div class="buttons">
+            <button id="dislike-btn" class="dislike">👎 Dislike</button>
+            <button id="like-btn" class="like">👍 Like</button>
+        </div>
+    </main>
 
-    <!-- Verknüpfung zur externen JavaScript-Datei -->
+    <button onclick="goto('menu.html')>Zurrück zum Menu</button>
+
     <script src="script.js"></script>
 </body>
 </html>
+
