--- a/dds.html
+++ b/dds.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNACKS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-dd.css">
 </head>
 <body>
     <header>
@@ -26,7 +26,7 @@
 
     <button onclick="goto('menu.html')>Zurrück zum Menu</button>
 
-    <script src="script.js"></script>
+    <script src="ddjs.js"></script>
 </body>
 </html>
 
