--- a/dds.html
+++ b/dds.html
@@ -3,28 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SNACKS</title>
+    <title>Snacks</title>
     <link rel="stylesheet" href="styles-dd.css">
 </head>
 <body>
     <header>
         <h1>🍽️ Snacks</h1>
     </header>
-    
+
     <main>
         <div class="card">
             <img id="zutaten-image" src="" alt="Zutatenbild">
             <h2 id="zutaten-name"></h2>
             <p id="zutaten-tags"></p>
         </div>
-        
+
         <div class="buttons">
             <button id="dislike-btn" class="dislike">👎 Dislike</button>
             <button id="like-btn" class="like">👍 Like</button>
         </div>
     </main>
-
-    <button onclick="goto('menu.html')>Zurrück zum Menu</button>
 
     <script src="ddjs.js"></script>
 </body>
