--- a/dds.html
+++ b/dds.html
@@ -13,7 +13,7 @@
 
     <main>
         <div class="card">
-            <img id="zutaten-image" src="" alt="Zutatenbild">
+            <img id="zutaten-image" src="img/z/1.jpg" alt="Zutatenbild">
             <h2 id="zutaten-name"></h2>
             <p id="zutaten-tags"></p>
         </div>
