--- a/dda.html
+++ b/dda.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1>Abendessen</h1>
+    <button onclick="goto('menu.html')">Back</button>
 
     <!-- Verknüpfung zur externen JavaScript-Datei -->
     <script src="script.js"></script>
