--- a/dds.html
+++ b/dds.html
@@ -24,6 +24,9 @@
         </div>
     </main>
 
+        <button onclick="goto('menu.html')">Back</button>
+
+
     <script src="ddjs.js"></script>
 </body>
 </html>
