--- a/ddf.html
+++ b/ddf.html
@@ -9,6 +9,10 @@
 <body>
    <h1>Frühstück</h1>
 
+
+        <button onclick="goto('menu.html')">Back</button>
+
+    
     <!-- Verknüpfung zur externen JavaScript-Datei -->
     <script src="script.js"></script>
 </body>
