--- a/ddm.html
+++ b/ddm.html
@@ -10,6 +10,9 @@
 
   <h1>Mittagessen</h1>
 
+        <button onclick="goto('menu.html')">Back</button>
+
+
     <!-- Verknüpfung zur externen JavaScript-Datei -->
     <script src="script.js"></script>
 </body>
