--- a/dds.html
+++ b/dds.html
@@ -20,11 +20,11 @@
 
         <div class="buttons">
             <button id="dislike-btn" class="dislike">👎 Dislike</button>
-            <button id="like-btn" class="like">👍 Like</button>
+            <button id="like-btn" class="like">👍 Like</button></br>
+            <button onclick="goto('menu.html')">Back</button>
+
         </div>
     </main>
-
-        <button onclick="goto('menu.html')">Back</button>
 
 
     <script src="ddjs.js"></script>
