--- a/dds.html
+++ b/dds.html
@@ -19,11 +19,12 @@
         </div>
 
         <div class="buttons">
-            <button id="dislike-btn" class="dislike">👎 Dislike</button>
-            <button id="like-btn" class="like">👍 Like</button></br>
-            <button onclick="goto('menu.html')">Back</button>
-
-        </div>
+    <button id="dislike-btn" class="dislike">👎 Dislike</button>
+    <button id="like-btn" class="like">👍 Like</button>
+</div>
+<div class="back-button">
+    <button onclick="goto('menu.html')">Back</button>
+</div>
     </main>
 
 
