--- a/dds.html
+++ b/dds.html
@@ -10,24 +10,22 @@
     <header>
         <h1>🍽️ Snacks</h1>
     </header>
-
     <main>
         <div class="card">
-            <img id="zutaten-image" src="img/z/1.jpg" alt="Zutatenbild">
+            <div class="card-image-container">
+                <img id="zutaten-image" src="img/z/1.jpg" alt="Zutatenbild">
+            </div>
             <h2 id="zutaten-name"></h2>
             <p id="zutaten-tags"></p>
         </div>
-
         <div class="buttons">
-    <button id="dislike-btn" class="dislike">👎 Dislike</button>
-    <button id="like-btn" class="like">👍 Like</button>
-</div>
-<div class="back-button">
-    <button onclick="goto('menu.html')">Back</button>
-</div>
+            <button id="dislike-btn" class="dislike">👎 Dislike</button>
+            <button id="like-btn" class="like">👍 Like</button>
+        </div>
+        <div class="back-button">
+            <button onclick="goto('menu.html')">Back</button>
+        </div>
     </main>
-
-
     <script src="ddjs.js"></script>
 </body>
 </html>
