--- a/dds.html
+++ b/dds.html
@@ -23,7 +23,7 @@
             <button id="like-btn" class="like">👍 Like</button>
         </div>
         <div class="back-button">
-            <button onclick="goto('menu.html')">Back</button>
+            <button id="back-btn">Back</button>
         </div>
     </main>
     <script src="ddjs.js"></script>
